[gd_scene load_steps=5 format=3 uid="uid://bcubeangmffwr"]

[ext_resource type="Script" path="res://scripts/TitleScreen.gd" id="1_usxmh"]
[ext_resource type="Texture2D" uid="uid://cjidtjvucxaxs" path="res://Assets/blue_panel.png" id="2_idau2"]
[ext_resource type="Texture2D" uid="uid://coax0gfo1anoo" path="res://Assets/blue_button00.png" id="2_smdla"]
[ext_resource type="Texture2D" uid="uid://cqch5noqnkxt7" path="res://Assets/blue_button01.png" id="4_7bvnr"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_usxmh")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -253.0
offset_right = 280.0
offset_bottom = 253.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 50

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="LogoBox" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_idau2")
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 46

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="PlayButton" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_7bvnr")
texture_pressed = ExtResource("2_smdla")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -11.5
offset_right = 16.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Play"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="HowToPlayButton" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("4_7bvnr")
texture_pressed = ExtResource("2_smdla")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer2/HowToPlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "How to Play"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="OptionsButton" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("4_7bvnr")
texture_pressed = ExtResource("2_smdla")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer3/OptionsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Options"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="QuitButton" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer4"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("4_7bvnr")
texture_pressed = ExtResource("2_smdla")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer4/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Quit"

[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer2/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer3/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer2/MarginContainer/HBoxContainer2/HBoxContainer4/QuitButton" to="." method="_on_quit_button_pressed"]
